<resources>
    <string name="app_name">Uplace</string>
    <string name="input_example">Example: Barcelona, Madrid…</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="dwelling">Dwelling type</string>
    <string name="price">Price</string>
    <string name="characteristics">Characteristics</string>
    <string name="new_build">New Build</string>
    <string name="terrace">Terrace</string>
    <string name="elevator">Elevator</string>
    <string name="balcony">Balcony</string>
    <string name="pool">Pool</string>
    <string name="garden">Garden</string>
    <string name="heat">Heat</string>
    <string name="internet">Internet</string>
    <string name="property_image">Property Image</string>
    <string name="property_name">Property Name</string>
    <string name="pLocation">Location</string>
    <string name="favourites_image">Favourites Image</string>
    <string name="property_price">Price</string>
    <string name="property_type">Type</string>
    <string name="year_of_construction">Year of construction</string>
    <string name="square_meters">Square meters</string>
    <string name="number_of_rooms">Number of rooms</string>

    <string-array name="dwelling_types">
        <item>Apartment</item>
        <item>Building</item>
        <item>Business</item>
        <item>Establishment</item>
        <item>Hotel</item>
        <item>Industrial Plant</item>
        <item>Office</item>
        <item>Parking</item>
        <item>Terrain</item>
    </string-array>

    <string name="str_number">%d</string>
    <string name="str_text">%s</string>
    <string name="str_price">%d€</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_list">List</string>
    <string name="title_map">Map</string>
    <string name="title_notifications">Notifications</string>

    <string name="google_map_api_key">AIzaSyAbF82Yfz7IPBt-or_p821Ack9nhX6funU</string>
    <string name="send">Send</string>
    <string name="parking">Parking</string>
    <string name="office">Office</string>
    <string name="kitchen_office">Kitchen Office</string>
    <string name="near_transport">Near Transport</string>
    <string name="reformed">Reformed</string>
    <string name="energy_certificate">Energy Certificate</string>
    <string name="kitchen">Kitchen</string>
    <string name="surface">Surface</string>
    <string name="city">City</string>
    <string name="no_response">No response</string>
    <string name="price_from">Price from</string>
    <string name="price_to">Price to</string>
    <string name="category">Category</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="transaction_type">Transaction type</string>

    <string name="error_city">City must contain at least 3 characters.</string>
    <string name="error_empty">This field can not be empty.</string>
    <string name="error_email">Invalid email format</string>
    <string name="error_phone">Phone must contain 9 digits</string>
</resources>
