<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.uplace.uplace.MainActivity">

    <ImageView
        android:id="@+id/upLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/inputTxtMain"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="fill_vertical|center_horizontal"
        android:hint="@string/input_example"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upLogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/inputTxtMain"
        app:layout_constraintTop_toBottomOf="@+id/inputTxtMain">

        <ImageView
            android:id="@+id/imgFilter"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/filters"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filters"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/inputTxtMain"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/inputTxtMain">

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/search"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgFav"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

</android.support.constraint.ConstraintLayout>
